projects/deployK8Application/vpc.tf
# vpc.tf

resource "aws_vpc" "my-vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "jenkins-subnet-1" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = var.subnet_cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = false # this makes the subnet private
  tags = {
    Name = "${var.env_prefix}-subnet-1"
  }
}
